# angler

./: .gitignore  .gitingore  .gitmodules  CMakeLists.txt  build.sh  cache.angler  default.scale  my_skin.scale  readme.md  scale_editor
src/core/: angler.cpp  angler_file_io.h  angler_widgets.h  file_indexer.cpp  file_indexer.h  icons.h  scale_editor.cpp  scoped_timer.h  style_manager.cpp  texture_loader.cpp  thread_pool.h  user_dirs.h
src/core/assets/: my_skin.scale
src/lib/glad/: glad.c
src/lib/glad/glad/: glad.h
